changes decorator patter

--- a/src/app/patterns/structural/decorator/decorator.component.html
+++ b/src/app/patterns/structural/decorator/decorator.component.html
@@ -1,1 +1,3 @@
-<p>decorator works!</p>
+<p>Value: {{currentItemsPerPage}}</p>
+<button (click)="setData()">Set data</button>
+<button (click)="clear()">Clear</button>
