--- a/src/app/solid/single-responsibility/single-responsibility.component.html
+++ b/src/app/solid/single-responsibility/single-responsibility.component.html
@@ -1,2 +1,4 @@
 <h2 style="color: gray">Only One Responsibility show current time:</h2>
-<div><h1> {{ rxTime | date: 'hh:mm:ss a' }} </h1></div>
+<div>
+  <h1>{{ rxTime | date : "hh:mm:ss a" }}</h1>
+</div>
