--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-single-responsibility></app-single-responsibility>
 <app-rxjs></app-rxjs>
+<h1>Hello NGRX/Store</h1>
+<app-create></app-create>
+<app-read-delete></app-read-delete>
